tests/NormalTests/paczka1/fuzzy1/92476755.err
Error in line 1: S867 A745 62,2
Error in line 2: S867 S867 55,1
Error in line 10: zhFT S867 41,I
Error in line 13: zhFT A880 79,4
Error in line 25: zhFT A262 62,7
Error in line 24: qeY0rxC A262 14,7
Error in line 29: VunSm8A91 S867 276,7
